css/main.css
body {
  margin: 0;
  font-family: 'Raleway', sans-serif;
  color: #222222;
  transition: background-color 0.5s;
}

.bg-default {
  background-color: #fafafa;
}

.bg-primary {
  background-color: #0088cc;
}

.bg-info {
  background-color: #49afcd;
}

.bg-success {
  background-color: #5bb75b;
}

.bg-warning {
  background-color: #faa732;
}

.bg-danger {
  background-color: #da4f49;
}


.header {
  padding: 20px 0 10px;
  margin-bottom: 10px;
  background: #fafafa;
  border-bottom: 5px solid #e6e6e6;
  text-align: center;
}

.header-title {
  margin: 0;
  font-size: 55px;
  font-weight: normal;
}

.button-list {
  text-align: center;
}

.button-list li {
  display: inline-block;
  margin: 2px;
  list-style: none;
  vertical-align: top;
}

.button-list li .button {
  padding: 0 35px;
}

.flip-clock-wrapper {
  width: 460px;
  margin: 150px auto 0;
}

.menu-icons-panel {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 10px 0;
  border-top: 5px solid #e6e6e6;
  margin: 0;
  background: #fafafa;
  list-style: none;
  text-align: center;
}

.menu-icons-panel li {
  display: inline-block;
  margin: 0 10px;
}

.menu-icons-panel a {
  color: #6f6f6f;
  font-size: 2em;
  transition: color 0.2s;
}

.menu-icons-panel a:hover,
.menu-icons-panel a:active {
  color: black;
}

.menu-icons-panel a.is-active {
  color: #222222;
}

